# rustdown

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
references/: full.md  simple.md  test.md
src/: app.rs  cli.rs  lib.rs  main.rs  markdown.rs
src/render/: mod.rs  table.rs
tests/: render_smoke.rs
