[package]
name = "rustdown-cli"
version = "0.1.1"
edition = "2024"
authors = ["Alex Spinu"]
description = "Render markdown/html/html-markdown in the terminal"
keywords = ["markdown", "terminal", "html", "cli"]
categories = ["command-line-utilities"]
documentation = "https://github.com/spinualexandru/rustdown#readme"
repository = "https://github.com/spinualexandru/rustdown"
homepage = "https://github.com/spinualexandru/rustdown"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rustdown"
path = "src/main.rs"

[dependencies]
termcolor = "1.4.1"
pulldown-cmark = { version = "0.13.0", default-features = false, features = [
    "html",
    "simd",
] }
clap = { version = "4.5", features = ["derive"] }
html2md = "0.2"
